--- a/HomeWork_1/app/src/main/res/layout/activity_main.xml
+++ b/HomeWork_1/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_contact" />
 
 </FrameLayout>
