--- a/HomeWork_1/app/src/main/res/layout/item_contact.xml
+++ b/HomeWork_1/app/src/main/res/layout/item_contact.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?android:selectableItemBackgroundBorderless"
     android:orientation="vertical"
     android:padding="16dp">
@@ -12,12 +13,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="Вася" />
 
     <TextView
         android:id="@+id/contactPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        tools:text="+79998881100" />
 </LinearLayout>
