--- a/HomeWork_2/app/src/main/res/layout/layout_flexbox_example.xml
+++ b/HomeWork_2/app/src/main/res/layout/layout_flexbox_example.xml
@@ -19,7 +19,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="asdsadasddasdasdasdasdasdasdasdasdasdasdasdasd" />
+        tools:text="asdsadasddasdasdasdasdasdasdasdasdasdasdasdasdыфвыфвфывфывфыв" />
 
     <TextView
         android:layout_width="wrap_content"
