--- a/HomeWork_2/app/src/main/res/layout/view_social_post.xml
+++ b/HomeWork_2/app/src/main/res/layout/view_social_post.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        style="@style/SecondaryTextTheme"
         tools:text="5 minutes ago" />
 
     <ImageView
@@ -37,6 +38,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textSize="16sp"
         tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. \nCras vitae ex molestie, vulputate nisl vel, placerat dolor. Donec elementum nibh vitae gravida cursus." />
 
     <ImageView
@@ -62,22 +64,49 @@
         android:background="?android:selectableItemBackgroundBorderless"
         android:src="@drawable/ic_favorite_outline" />
 
+    <TextView
+        android:id="@+id/postLikeCountText"
+        style="@style/SecondaryTextTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        tools:text="375" />
+
+
     <ImageButton
         android:id="@+id/postCommentBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="24dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:src="@drawable/ic_comment" />
+
+    <TextView
+        android:id="@+id/postCommentCountText"
+        style="@style/SecondaryTextTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="1dp"
+        tools:text="10" />
+
 
     <ImageButton
         android:id="@+id/postShareBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="48dp"
         android:layout_marginTop="24dp"
         android:background="?android:selectableItemBackgroundBorderless"
         android:src="@drawable/ic_share" />
+
+    <TextView
+        android:id="@+id/postShareCountText"
+        style="@style/SecondaryTextTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        tools:text="17" />
 
 </merge>
