--- a/HomeWork_2/app/src/main/res/values/colors.xml
+++ b/HomeWork_2/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#41c300</color>
     <color name="colorText">#000</color>
     <color name="colorSecondaryText">#8e8e8e</color>
-
+    <color name="colorLike">#D30000</color>
 
 </resources>
