--- a/HomeWork_2/app/src/main/res/layout/item_post.xml
+++ b/HomeWork_2/app/src/main/res/layout/item_post.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardPreventCornerOverlap="false"
+    android:id="@+id/postCard"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardPreventCornerOverlap="false"
+    android:transitionName="postCard">
 
     <com.adeldolgov.homework_2.ui.viewgroup.SocialPostViewGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
