--- a/HomeWork_2/app/src/main/res/values/styles.xml
+++ b/HomeWork_2/app/src/main/res/values/styles.xml
@@ -18,4 +18,9 @@
         <item name="android:textColor">@color/colorSecondaryText</item>
     </style>
 
+    <style name="CircleImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
