--- a/HomeWork_2/app/src/main/res/layout/activity_post_details.xml
+++ b/HomeWork_2/app/src/main/res/layout/activity_post_details.xml
@@ -17,7 +17,7 @@
         android:transitionName="postCard"
         app:cardPreventCornerOverlap="false">
 
-        <com.adeldolgov.homework_2.ui.viewgroup.SocialDetailPostViewGroup
+        <com.adeldolgov.feeder.ui.viewgroup.SocialDetailPostViewGroup
             android:id="@+id/postDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
