--- a/HomeWork_2/app/src/main/res/layout/view_social_list_shimmer.xml
+++ b/HomeWork_2/app/src/main/res/layout/view_social_list_shimmer.xml
@@ -16,13 +16,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.adeldolgov.homework_2.ui.viewgroup.PlaceHolderSocialPostViewGroup
+        <com.adeldolgov.feeder.ui.viewgroup.PlaceHolderSocialPostViewGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <com.adeldolgov.homework_2.ui.viewgroup.PlaceHolderSocialPostViewGroup
+        <com.adeldolgov.feeder.ui.viewgroup.PlaceHolderSocialPostViewGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <com.adeldolgov.homework_2.ui.viewgroup.PlaceHolderSocialPostViewGroup
+        <com.adeldolgov.feeder.ui.viewgroup.PlaceHolderSocialPostViewGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
